--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@ turtle_game();
  
 <body>
 
-
+<button id="reset">Reset To Home</button>
 <input id="program"></input>
 <button id="step">Step</button>
+<button id="execute">Run Program</button>
+
+<p>
 <button id="forward">Forward</button>
-<button id="reset">Reset To Home</button>
 <button id="clockwise">Clockwise</button>
 <button id="widdershins">Widdershins</button>
 
@@ -28,8 +30,10 @@ turtle_game();
 <span id="img1" style="display:none"> <img src="turtle-down.png"></img></span>
 <span id="img2" style="display:none"> <img src="turtle-left.png"></img></span>
 <span id="img3" style="display:none"> <img src="turtle-up.png"></img></span>
-
 </div>
+
+
+
 
 </body>
 </html>
