--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="turtle.css"> 
 <script src="jquery.js"></script>
 <script src="turtle.js"></script>
 
@@ -23,17 +24,7 @@ turtle_game();
 <button id="clockwise">Clockwise</button>
 <button id="widdershins">Widdershins</button>
 
-
-
-<div id="turtle" style="height:200px;width:200px;position:absolute;">
-<span id="img0" > <img src="turtle-right.png"></img></span>
-<span id="img1" style="display:none"> <img src="turtle-down.png"></img></span>
-<span id="img2" style="display:none"> <img src="turtle-left.png"></img></span>
-<span id="img3" style="display:none"> <img src="turtle-up.png"></img></span>
+<div id="turtle">
 </div>
-
-
-
-
 </body>
 </html>
